--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon src/**/**.ts",
     "build": "npx tsc && node dist/Server/index.js",
     "lint": "eslint src/**/**.ts",
-    "prettier": "prettier src/**/**.ts --config .prettierrc --write"
+    "prettier": "prettier src/**/**.ts --config .prettierrc --write",
+    "jasmine": "jasmine"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,9 @@
     "nodemon": "^2.0.20",
     "prettier": "2.8.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "@types/jasmine": "^4.3.1"
   }
 }
