--- a/package.json
+++ b/package.json
@@ -4,38 +4,42 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "watch": "tsc-watch src/**/**.ts",
     "build": "npx tsc && node dist/Server/index.js",
     "lint": "eslint src/**/**.ts",
     "prettier": "prettier src/**/**.ts --config .prettierrc --write",
-    "migrate":"db-migrate --env test up && db-migrate up",
+    "migrate": "db-migrate --env test up && db-migrate up",
     "test": "ENV=test db-migrate --env test up && jasmine-ts && db-migrate db:drop test",
     "jasmine": "jasmine"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jasmine": "^4.3.1",
     "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
+    "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.20",
     "prettier": "2.8.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "jasmine": "^4.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "@types/jasmine": "^4.3.1"
+    "typescript": "^4.9.4"
   }
 }
